# to_dicom_seg

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
to_dicom_seg/: cli.py  converter.py  segment.py  template.py  terminologies.py
to_dicom_seg/templates/: segmentation_metadata.json
